--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node-telegram-bot-api": "^0.64.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
