--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    // Base config
     "target": "es2016",                                  
     "module": "commonjs",                                
     "esModuleInterop": true,                             
